drumkv1 - an old-school drum-kit sampler
----------------------------------------

ChangeLog

0.0.0  2012-10-03  Initial change-log entry.